<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_portfolio_textview">My Nanodegree Apps!</string>
    <string name="main_spotify_button">Spotify Streamer</string>
    <string name="main_scores_button">Scores App</string>
    <string name="main_library_button">Library App</string>
    <string name="main_buidIt_button">Build it Bigger</string>
    <string name="main_bacon_button">Bacon Reader</string>
    <string name="main_capstone_button">Capstone: My Own App</string>
</resources>
