<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView android:text="@string/main_portfolio_textview"
                style="@style/portfolio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                style="@style/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_spotify_button"
                android:id="@+id/main_spotify_button"
                android:onClick="onClick"/>

            <Button
                style="@style/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_scores_button"
                android:id="@+id/main_scores_button"
                android:onClick="onClick"/>

            <Button
                style="@style/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_library_button"
                android:id="@+id/main_library_button"
                android:onClick="onClick"/>

            <Button
                style="@style/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_buidIt_button"
                android:id="@+id/main_buidIt_button"
                android:onClick="onClick"/>

            <Button
                style="@style/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_bacon_button"
                android:id="@+id/main_bacon_button"
                android:onClick="onClick"/>

            <Button
                style="@style/special_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_capstone_button"
                android:id="@+id/main_capstone_button"
                android:onClick="onClick"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
